Fix overflow on columns

--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -201,6 +201,7 @@
 		}
 
 		margin: 0 0 5px 0;
+		overflow: hidden;
 	}
 	ul {
 		overflow: visible;
